--- a/demos/basic.html
+++ b/demos/basic.html
@@ -19,6 +19,7 @@
     .container {
       border: 1px dashed #CCC;
       position: relative;
+      width: 700px;
     }
 
     .container > div {
@@ -42,18 +43,18 @@
   </script>
 </head>
 <body>
-  <div class="container">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+  <div class="container" id="a">
+    <div>A</div>
+    <div>B</div>
+    <div>C</div>
+    <div>D</div>
     <div></div>
     <div></div>
     <div></div>
     <div></div>
   </div>
 
-  <div class="container">
+  <div class="container" id="b">
     <div></div>
     <div></div>
     <div></div>
